feat: replaced helmet with middleware, added Docker

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         href="https://github.com/byt3h3ad/hndailyapi"
         target="_blank"
         title="API"
-        ><em>Hacker News Daily Api:</em></a
+        ><em>Hacker News Daily API:</em></a
       >
       REST API built with TypeScript and Express for
       <a href="https://www.daemonology.net/hn-daily/" target="_blank"
